--- a/Games/SolarSystem/SolarSystem.vcxproj
+++ b/Games/SolarSystem/SolarSystem.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{d7827957-e617-40ab-8265-3a8989ce9ba1}</ProjectGuid>
-    <RootNamespace>Blainnflare</RootNamespace>
+    <ProjectGuid>{9bc34182-08c8-40a3-ad6a-a5e1687e49c3}</ProjectGuid>
+    <RootNamespace>SolarSystem</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -40,13 +40,13 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -70,12 +70,11 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <LinkIncremental>false</LinkIncremental>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)bin-int\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)bin-int\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
@@ -112,24 +111,16 @@
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ConformanceMode>false</ConformanceMode>
+      <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <PrecompiledHeader>Create</PrecompiledHeader>
-      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(SolutionDir)Dependencies\assimp\include;$(SolutionDir)Dependencies\DXTK\Inc;$(SolutionDir)Blainn\vendor\imgui;$(SolutionDir)Blainn\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <ForcedIncludeFiles>pch.h</ForcedIncludeFiles>
-      <MultiProcessorCompilation>false</MultiProcessorCompilation>
+      <AdditionalIncludeDirectories>$(SolutionDir)Dependencies\DXTK\Inc;$(SolutionDir)Blainn\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(SolutionDir)bin\Blainnflare\$(Platform)\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Blainnflare.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
-    <Lib>
-      <AdditionalDependencies>DirectXTK12.lib;assimp-vc143-mtd.lib;zlibstaticd.lib</AdditionalDependencies>
-    </Lib>
-    <Lib>
-      <AdditionalLibraryDirectories>$(SolutionDir)Dependencies\assimp\lib\Debug\;$(SolutionDir)Dependencies\assimp\contrib\zlib\Debug\;$(SolutionDir)Dependencies\DXTK\Bin\Desktop_2022_Win10\$(Platform)\$(Configuration)\</AdditionalLibraryDirectories>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -138,105 +129,28 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ConformanceMode>false</ConformanceMode>
-      <PrecompiledHeader>Create</PrecompiledHeader>
-      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)Dependencies\assimp\include;$(SolutionDir)Dependencies\DXTK\Inc;$(SolutionDir)Blainn\vendor\imgui;$(SolutionDir)Blainn\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <MultiProcessorCompilation>false</MultiProcessorCompilation>
+      <AdditionalIncludeDirectories>$(SolutionDir)Dependencies\DXTK\Inc;$(SolutionDir)Blainn\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(SolutionDir)bin\Blainnflare\$(Platform)\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Blainnflare.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
-    <Lib>
-      <AdditionalDependencies>DirectXTK12.lib;assimp-vc143-mtd.lib;zlibstaticd.lib</AdditionalDependencies>
-    </Lib>
-    <Lib>
-      <AdditionalLibraryDirectories>$(SolutionDir)Dependencies\assimp\lib\Debug\;$(SolutionDir)Dependencies\assimp\contrib\zlib\Debug\;$(SolutionDir)Dependencies\DXTK\Bin\Desktop_2022_Win10\$(Platform)\$(Configuration)\</AdditionalLibraryDirectories>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\Components\ActorComponents\CharacterComponents\InputComponent.h" />
-    <ClInclude Include="src\Components\ActorComponents\CharacterComponents\PlayerInputComponent.h" />
-    <ClInclude Include="src\Components\ActorComponents\CollisionComponent.h" />
-    <ClInclude Include="src\Components\ActorComponents\StaticMeshComponent.h" />
-    <ClInclude Include="src\Components\ActorComponents\CharacterComponents\CameraComponent.h" />
-    <ClInclude Include="src\Components\ActorComponents\TransformComponent.h" />
-    <ClInclude Include="src\Components\Component.h" />
-    <ClInclude Include="src\Core\Buffer.h" />
-    <ClInclude Include="src\Core\Camera.h" />
-    <ClInclude Include="src\Core\Delegates.h" />
-    <ClInclude Include="src\Core\Input.h" />
-    <ClInclude Include="src\DX12\DXFrameResource.h" />
-    <ClInclude Include="src\DX12\DXStaticMesh.h" />
-    <ClInclude Include="src\Core\Layer.h" />
-    <ClInclude Include="src\Core\LayerStack.h" />
-    <ClInclude Include="src\Core\UUID.h" />
-    <ClInclude Include="src\DX12\DXBuffer.h" />
-    <ClInclude Include="src\DX12\DXModel.h" />
-    <ClInclude Include="src\DX12\DXPipeline.h" />
-    <ClInclude Include="src\DX12\DXRenderingContext.h" />
-    <ClInclude Include="src\DX12\DXResourceManager.h" />
-    <ClInclude Include="src\DX12\DXShader.h" />
-    <ClInclude Include="src\DX12\DXTexture.h" />
-    <ClInclude Include="src\DX12\DXUploadBuffer.h" />
-    <ClInclude Include="src\EntryPoint.h" />
-    <ClInclude Include="src\ImGui\ImGuiLayer.h" />
-    <ClInclude Include="src\pch.h" />
-    <ClInclude Include="src\Core\Application.h" />
-    <ClInclude Include="src\Core\Events\ApplicationEvent.h" />
-    <ClInclude Include="src\Core\Events\KeyEvent.h" />
-    <ClInclude Include="src\Core\Events\MouseEvent.h" />
-    <ClInclude Include="src\Core\GameTimer.h" />
-    <ClInclude Include="src\Core\KeyCodes.h" />
-    <ClInclude Include="src\Core\Window.h" />
-    <ClInclude Include="src\DX12\DXSwapChain.h" />
-    <ClInclude Include="src\DX12\DXDevice.h" />
-    <ClInclude Include="src\Scene\Actor.h" />
-    <ClInclude Include="src\Core\GameObject.h" />
-    <ClInclude Include="src\Scene\Scene.h" />
-    <ClInclude Include="src\Util\ComboboxSelector.h" />
-    <ClInclude Include="src\Util\d3dx12.h" />
-    <ClInclude Include="src\Util\MathHelper.h" />
-    <ClInclude Include="src\Util\Util.h" />
-    <ClInclude Include="src\Core\Events\Event.h" />
+    <ClCompile Include="src\Planet.cpp" />
+    <ClCompile Include="src\SolarAppLayer.cpp" />
+    <ClCompile Include="src\SolarSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Components\ActorComponents\TransformComponent.cpp" />
-    <ClCompile Include="src\Core\Camera.cpp" />
-    <ClCompile Include="src\Core\Delegates.cpp" />
-    <ClCompile Include="src\Core\GameObject.cpp" />
-    <ClCompile Include="src\Core\Input.cpp" />
-    <ClCompile Include="src\Core\Layer.cpp" />
-    <ClCompile Include="src\Core\LayerStack.cpp" />
-    <ClCompile Include="src\Core\UUID.cpp" />
-    <ClCompile Include="src\DX12\DXBuffer.cpp" />
-    <ClCompile Include="src\DX12\DXFrameResource.cpp" />
-    <ClCompile Include="src\DX12\DXModel.cpp" />
-    <ClCompile Include="src\DX12\DXStaticMesh.cpp" />
-    <ClCompile Include="src\DX12\DXRenderingContext.cpp" />
-    <ClCompile Include="src\DX12\DXResourceManager.cpp" />
-    <ClCompile Include="src\DX12\DXShader.cpp" />
-    <ClCompile Include="src\ImGui\ImGuiLayer.cpp" />
-    <ClCompile Include="src\pch.cpp" />
-    <ClCompile Include="src\Core\Application.cpp" />
-    <ClCompile Include="src\DX12\DXSwapChain.cpp" />
-    <ClCompile Include="src\Core\GameTimer.cpp" />
-    <ClCompile Include="src\Core\Window.cpp" />
-    <ClCompile Include="src\DX12\DXDevice.cpp" />
-    <ClCompile Include="src\Scene\Actor.cpp" />
-    <ClCompile Include="src\Scene\Scene.cpp" />
-    <ClCompile Include="src\Util\ComboboxSelector.cpp" />
-    <ClCompile Include="src\Util\MathHelper.cpp" />
-    <ClCompile Include="src\Util\Util.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="src\Shaders\color.hlsl">
-      <FileType>Document</FileType>
-    </None>
+    <ClInclude Include="src\Planet.h" />
+    <ClInclude Include="src\Player.h" />
+    <ClInclude Include="src\SolarAppLayer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
