--- a/Games/SolarSystem/SolarSystem.vcxproj.filters
+++ b/Games/SolarSystem/SolarSystem.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="src\Planet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\WeirdOne.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\SolarAppLayer.h">
@@ -33,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\WeirdOne.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
