--- a/Blainn/Blainnflare.vcxproj
+++ b/Blainn/Blainnflare.vcxproj
@@ -160,12 +160,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\Components\ActorComponents\CharacterComponents\InputComponent.h" />
+    <ClInclude Include="src\Components\ActorComponents\CharacterComponents\OrbitalCameraController.h" />
     <ClInclude Include="src\Components\ActorComponents\CharacterComponents\PlayerInputComponent.h" />
     <ClInclude Include="src\Components\ActorComponents\CollisionComponent.h" />
     <ClInclude Include="src\Components\ActorComponents\StaticMeshComponent.h" />
     <ClInclude Include="src\Components\ActorComponents\CharacterComponents\CameraComponent.h" />
     <ClInclude Include="src\Components\ActorComponents\TransformComponent.h" />
     <ClInclude Include="src\Components\Component.h" />
+    <ClInclude Include="src\Components\ComponentManager.h" />
     <ClInclude Include="src\Core\Buffer.h" />
     <ClInclude Include="src\Core\Camera.h" />
     <ClInclude Include="src\Core\Delegates.h" />
@@ -205,6 +207,7 @@
     <ClInclude Include="src\Core\Events\Event.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Components\ActorComponents\CharacterComponents\OrbitalCameraController.cpp" />
     <ClCompile Include="src\Components\ActorComponents\TransformComponent.cpp" />
     <ClCompile Include="src\Core\Camera.cpp" />
     <ClCompile Include="src\Core\Delegates.cpp" />
