--- a/Blainn/Blainnflare.vcxproj
+++ b/Blainn/Blainnflare.vcxproj
@@ -116,7 +116,7 @@
       <LanguageStandard>stdcpp20</LanguageStandard>
       <PrecompiledHeader>Create</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(SolutionDir)Dependencies\assimp\include;$(SolutionDir)Dependencies\DXTK\Inc;$(SolutionDir)Blainn\vendor\imgui;$(SolutionDir)Blainn\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Dependencies\LearningDX12\DX12Lib\inc;$(SolutionDir)Dependencies\DirectXTex\DirectXTex;$(SolutionDir)Dependencies\assimp\include;$(SolutionDir)Dependencies\DXTK\Inc;$(SolutionDir)Blainn\vendor\imgui;$(SolutionDir)Blainn\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>pch.h</ForcedIncludeFiles>
       <MultiProcessorCompilation>false</MultiProcessorCompilation>
     </ClCompile>
@@ -125,10 +125,10 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalDependencies>DirectXTK12.lib;assimp-vc143-mtd.lib;zlibstaticd.lib</AdditionalDependencies>
+      <AdditionalDependencies>dxguid.lib;DX12Libd.lib;DirectXTex.lib;DirectXTK12.lib;assimp-vc143-mtd.lib;zlibstaticd.lib</AdditionalDependencies>
     </Lib>
     <Lib>
-      <AdditionalLibraryDirectories>$(SolutionDir)Dependencies\assimp\lib\Debug\;$(SolutionDir)Dependencies\assimp\contrib\zlib\Debug\;$(SolutionDir)Dependencies\DXTK\Bin\Desktop_2022_Win10\$(Platform)\$(Configuration)\</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)Dependencies\DirectXTex\DirectXTex\Bin\Desktop_2022\$(Platform)\$(Configuration)\;$(SolutionDir)Dependencies\LearningDX12\lib\$(Configuration);$(SolutionDir)Dependencies\assimp\lib\Debug\;$(SolutionDir)Dependencies\assimp\contrib\zlib\Debug\;$(SolutionDir)Dependencies\DXTK\Bin\Desktop_2022_Win10\$(Platform)\$(Configuration)\</AdditionalLibraryDirectories>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -142,7 +142,7 @@
       <PrecompiledHeader>Create</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)Dependencies\assimp\include;$(SolutionDir)Dependencies\DXTK\Inc;$(SolutionDir)Blainn\vendor\imgui;$(SolutionDir)Blainn\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Dependencies\LearningDX12\DX12Lib\inc;$(SolutionDir)Dependencies\DirectXTex\DirectXTex;$(SolutionDir)Dependencies\assimp\include;$(SolutionDir)Dependencies\DXTK\Inc;$(SolutionDir)Blainn\vendor\imgui;$(SolutionDir)Blainn\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>false</MultiProcessorCompilation>
     </ClCompile>
     <Link>
@@ -152,17 +152,18 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalDependencies>DirectXTK12.lib;assimp-vc143-mtd.lib;zlibstaticd.lib</AdditionalDependencies>
+      <AdditionalDependencies>DX12Libd.lib;DirectXTex.lib;DirectXTK12.lib;assimp-vc143-mtd.lib;zlibstaticd.lib</AdditionalDependencies>
     </Lib>
     <Lib>
-      <AdditionalLibraryDirectories>$(SolutionDir)Dependencies\assimp\lib\Release\;$(SolutionDir)Dependencies\assimp\contrib\zlib\Release\;$(SolutionDir)Dependencies\DXTK\Bin\Desktop_2022_Win10\$(Platform)\$(Configuration)\</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)Dependencies\DirectXTex\DirectXTex\Bin\Desktop_2022\$(Platform)\$(Configuration)\;$(SolutionDir)Dependencies\LearningDX12\lib\$(Configuration);$(SolutionDir)Dependencies\assimp\lib\Release\;$(SolutionDir)Dependencies\assimp\contrib\zlib\Release\;$(SolutionDir)Dependencies\DXTK\Bin\Desktop_2022_Win10\$(Platform)\$(Configuration)\</AdditionalLibraryDirectories>
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\Components\ActorComponents\CharacterComponents\InputComponent.h" />
     <ClInclude Include="src\Components\ActorComponents\CharacterComponents\OrbitalCameraController.h" />
     <ClInclude Include="src\Components\ActorComponents\CharacterComponents\PlayerInputComponent.h" />
-    <ClInclude Include="src\Components\ActorComponents\CollisionComponent.h" />
+    <ClInclude Include="src\Components\ActorComponents\PhysicsComponents\CollisionComponent.h" />
+    <ClInclude Include="src\Components\ActorComponents\PhysicsComponents\SphereCollisionComponent.h" />
     <ClInclude Include="src\Components\ActorComponents\StaticMeshComponent.h" />
     <ClInclude Include="src\Components\ActorComponents\CharacterComponents\CameraComponent.h" />
     <ClInclude Include="src\Components\ActorComponents\TransformComponent.h" />
@@ -173,7 +174,11 @@
     <ClInclude Include="src\Core\Camera.h" />
     <ClInclude Include="src\Core\Delegates.h" />
     <ClInclude Include="src\Core\Input.h" />
+    <ClInclude Include="src\Core\CBIndexManager.h" />
+    <ClInclude Include="src\Core\MaterialIndexManager.h" />
+    <ClInclude Include="src\DX12\D3D12MemAlloc.h" />
     <ClInclude Include="src\DX12\DXFrameResource.h" />
+    <ClInclude Include="src\DX12\DXMaterial.h" />
     <ClInclude Include="src\DX12\DXStaticMesh.h" />
     <ClInclude Include="src\Core\Layer.h" />
     <ClInclude Include="src\Core\LayerStack.h" />
@@ -186,6 +191,7 @@
     <ClInclude Include="src\DX12\DXShader.h" />
     <ClInclude Include="src\DX12\DXTexture.h" />
     <ClInclude Include="src\DX12\DXUploadBuffer.h" />
+    <ClInclude Include="src\DX12\DynamicDescriptorHeap.h" />
     <ClInclude Include="src\EntryPoint.h" />
     <ClInclude Include="src\ImGui\ImGuiLayer.h" />
     <ClInclude Include="src\pch.h" />
@@ -202,7 +208,6 @@
     <ClInclude Include="src\Core\GameObject.h" />
     <ClInclude Include="src\Scene\Scene.h" />
     <ClInclude Include="src\Util\ComboboxSelector.h" />
-    <ClInclude Include="src\Util\d3dx12.h" />
     <ClInclude Include="src\Util\MathHelper.h" />
     <ClInclude Include="src\Util\Util.h" />
     <ClInclude Include="src\Core\Events\Event.h" />
@@ -218,6 +223,7 @@
     <ClCompile Include="src\Core\Layer.cpp" />
     <ClCompile Include="src\Core\LayerStack.cpp" />
     <ClCompile Include="src\Core\UUID.cpp" />
+    <ClCompile Include="src\DX12\D3D12MemAlloc.cpp" />
     <ClCompile Include="src\DX12\DXBuffer.cpp" />
     <ClCompile Include="src\DX12\DXFrameResource.cpp" />
     <ClCompile Include="src\DX12\DXModel.cpp" />
@@ -225,6 +231,7 @@
     <ClCompile Include="src\DX12\DXRenderingContext.cpp" />
     <ClCompile Include="src\DX12\DXResourceManager.cpp" />
     <ClCompile Include="src\DX12\DXShader.cpp" />
+    <ClCompile Include="src\DX12\DynamicDescriptorHeap.cpp" />
     <ClCompile Include="src\ImGui\ImGuiLayer.cpp" />
     <ClCompile Include="src\pch.cpp" />
     <ClCompile Include="src\Core\Application.cpp" />
