--- a/Blainn/Blainnflare.vcxproj.filters
+++ b/Blainn/Blainnflare.vcxproj.filters
@@ -266,6 +266,9 @@
     <ClCompile Include="src\DX12\DynamicDescriptorHeap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\DX12\DXTexture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\Shaders\color.hlsl" />
