--- a/Games/Katamari/Katamari.vcxproj.filters
+++ b/Games/Katamari/Katamari.vcxproj.filters
@@ -36,4 +36,8 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="src\Shaders\BasePS.hlsli" />
+    <None Include="src\Shaders\Matrix.hlsli" />
+  </ItemGroup>
 </Project>
